Bug Test on Google Pixel 6 track search result's name is hidden, does not wrap

--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -653,7 +653,7 @@
         justify-content: center;
         text-align: center;
         white-space: wrap;
-        overflow: hidden;
+        overflow-y: hidden;
         text-overflow: ellipsis;
         margin: 0 auto;
     }
